[package]
name = "quantumcryptlib"
version = "0.1.0"
edition = "2021"

[dependencies]
# Post-Quantum Cryptography (PQC) crate for quantum-safe cryptographic algorithms
# pqcrypto = "0.18.1"  # Replace with the latest version available
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"    # For data serialization (JSON support)
rand = "0.8"         # Random number generation for key generation

[lib]
name = "quantumcryptlib"
path = "src/lib.rs"

[[bin]]
name = "quantumcryptlib_bin"
path = "src/main.rs"

